--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<p class="question">What is the capital of India?</p>
+		<input type="radio" name="net">New Delhi <br>
+		<input type="radio" name="net">Mumbai
+		<div>
+			<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+		</div>
+		
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
